Fix background color of modals in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,7 @@
   }
 }
 
-body {
+body, dialog {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb))
 }
